Mon Jun  2 22:47:08 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Control Letters): Add a note about %c only
	taking values from 0 to 255.
	(DOS Quoting): New node.

Thu Jan 31 16:17:27 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi, gawkinet.texi: Updated the Back-Cover text per
	latest from the FSF.

Fri Jan 25 12:13:39 2008  Dave Pitts         <dpitts@cozx.com>

	* gawk.texi (pwcat.c, grcat.c): Added ZOS_USS changes.

Mon Jan 14 05:30:16 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Add maintainer contact info for z/OS.

Mon Oct 22 08:49:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.6: Release tar file made.

Fri Oct 19 04:13:33 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.1: Add length(array) to list of extensions at end.
	Revise date.

Thu Oct 18 08:40:59 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* texinfo.tex: Updated to version from Texinfo 4.11.

Sun Oct 14 20:37:59 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* awkcard.in: Fix version numbers and copyright info, minor
	cleanups to format nicely.

Sun Sep 30 22:30:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Conversion): Add table describing locale decimal
	point versus period.

Sat Sep  8 23:53:46 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: A number of minor fixes based on suggestions
	from Jack Kelley <Jack.Kelley@epa.qld.gov.au>.

Sat Aug 11 22:46:14 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Copying): Move to GPL 3.

Wed May 30 17:11:19 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (CLEANFILES): Added, so that even "make distclean"
	will do the right thing.
	(clean): Removed, let automake to do it.

Tue May 29 22:49:16 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Document --use-lc-numeric. Document that some
	VMS systems come with an old version of gawk.

Mon May 28 08:21:51 2007  Arnold D. Robbins  <arnold@skeeve.com>
