@@ -1,3 +1,12 @@
+Tue Dec 30 14:30:12 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 199.
+
+	* ChangeLog, gawk.texi (Variable Typing):
+	Document that array elements created by `match' also get
+	strnum attribute.
+	* gawk.info: Ignoring patches of generated files.
+
 Tue Dec 30 13:37:03 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 193 and 194.
